Update frontend URL and add gunicorn to requirements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,7 +127,7 @@
             try {
                 // 2. 发送请求到你的后端服务器
                 //    将 URL 修改为后端服务器的实际地址和端口
-                const backendUrl = 'http://192.168.0.102:5000/api/generate-image'; // <--- 修改这里！
+                const backendUrl = 'https://kiddie-color-creations-backend.onrender.com/api/generate-image'; // <--- 修改这里！
                 // 或者，如果前后端在同一台机器上测试，也可以用:
                 // const backendUrl = 'http://localhost:5000/api/generate-image';
                 console.log(`正在向后端发送请求: ${backendUrl}`); // 打印将要请求的 URL
