--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,6 +6,7 @@
     <title>管理员后台 - Kiddie Color Creations</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="config.js"></script>
     <style>
         .admin-container {
             max-width: 800px;
@@ -402,7 +403,9 @@
             password: 'admin123'
         };
         const ADMIN_KEY = 'admin123'; // 简单的管理员密钥
-        const API_BASE_URL = 'http://127.0.0.1:5000/api';
+
+        // 使用配置文件中的API地址
+        const API_BASE_URL = window.CONFIG ? CONFIG.API_BASE_URL : 'http://127.0.0.1:5000/api';
 
         // 检查管理员登录状态
         function checkAdminLogin() {
