--- a/frontend/index.html
+++ b/frontend/index.html
@@ -663,6 +663,9 @@
             const errorMessage = document.getElementById('error-message');
             const paletteLoadingIndicator = document.getElementById('palette-loading-indicator');
 
+            // 定义超时警告变量
+            let timeoutWarning;
+
             // 显示加载状态
             loadingIndicator.style.display = 'flex';
             placeholderContent.style.display = 'none';
@@ -678,7 +681,7 @@
                 console.log('使用token:', authSystem.getAuthToken());
 
                 // 添加60秒超时提示
-                const timeoutWarning = setTimeout(() => {
+                timeoutWarning = setTimeout(() => {
                     showMessage('error-message', '图片生成中，请耐心等待...（这可能需要1-2分钟）', 'warning');
                 }, 60000);
 
@@ -726,6 +729,12 @@
                 console.log('生成创作成功，响应数据:', data);
 
                 if (data && data.imageUrl && data.colors) {
+                    // 检查是否有警告信息
+                    if (data.warning) {
+                        console.warn('后端警告:', data.warning);
+                        showMessage('error-message', `注意: ${data.warning}`, 'warning');
+                    }
+
                     // 更新图片显示
                     currentImageData = {
                         url: data.imageUrl,
