--- a/frontend/index.html
+++ b/frontend/index.html
@@ -664,7 +664,7 @@
             const paletteLoadingIndicator = document.getElementById('palette-loading-indicator');
 
             // 定义超时警告变量
-            let timeoutWarning;
+            let timeoutWarning, warning30s;
 
             // 显示加载状态
             loadingIndicator.style.display = 'flex';
@@ -680,9 +680,13 @@
                 console.log('开始生成创作，prompt:', prompt);
                 console.log('使用token:', authSystem.getAuthToken());
 
-                // 添加60秒超时提示
+                // 添加30秒和60秒的进度提示
+                const warning30s = setTimeout(() => {
+                    showMessage('error-message', '图片生成中，请耐心等待...（通常需要30-60秒）', 'warning');
+                }, 30000);
+
                 timeoutWarning = setTimeout(() => {
-                    showMessage('error-message', '图片生成中，请耐心等待...（这可能需要1-2分钟）', 'warning');
+                    showMessage('error-message', '图片生成中，即将完成...（请再等待片刻）', 'warning');
                 }, 60000);
 
                 // 使用统一的创作生成API
@@ -891,7 +895,10 @@
                 placeholderContent.style.display = 'flex';
                 mainImage.style.display = 'none';
                 } finally {
-                    // 清除超时提示
+                    // 清除所有超时提示
+                    if (warning30s) {
+                        clearTimeout(warning30s);
+                    }
                     if (timeoutWarning) {
                         clearTimeout(timeoutWarning);
                     }
