feat: 添加智能配色推荐功能
- 新增配色库数据文件(colorSchemes.js)：包含18个主题配色方案
- 新增配色分析器(colorAnalyzer.js)：实现关键词匹配和智能推荐算法
- 新增配色UI组件(colorUI.js)：提供用户交互界面和配色应用功能
- 新增配色推荐样式(colorRecommendation.css)：美观的配色卡片界面设计
- 更新主页面(index.html)：集成智能配色功能的CSS和JS引用

功能特性：
- 根据图片描述智能推荐配色方案
- 支持自然、动物、情感三大主题类别
- 一键应用推荐配色到现有配色区域
- 响应式设计，适配移动端
- 颜色复制和配色应用交互功能

提升用户体验，降低配色使用门槛，增强产品差异化竞争力

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiddie Color Creations - 儿童涂色创作平台</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/colorRecommendation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -271,6 +272,9 @@
 
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="js/colorSchemes.js"></script>
+    <script src="js/colorAnalyzer.js"></script>
+    <script src="js/colorUI.js"></script>
     <script>
         // 设置当前年份
         document.getElementById('current-year').textContent = new Date().getFullYear();
