fix: 修复积分系统显示和扣减逻辑错误
问题描述：
- testuser初始积分应为50，但网页显示48积分
- 生图后积分应减少到49，但实际显示增加到49积分
- 积分检查逻辑与后端不一致（前端检查2积分，后端只需1积分）
- 页面加载时可能显示过期的缓存积分数据

问题根源：
1. 前端积分检查逻辑过时：仍检查2积分而不是1积分
2. 积分数据同步问题：页面初始化时未从后端刷新最新数据
3. 缓存数据问题：localStorage中的旧数据影响积分显示

修复内容：

修复1: 前端积分检查逻辑统一
- auth.js: 将积分检查从2积分改为1积分
- 更新注释：'需要1积分：图片生成，配色推荐免费'
- 确保前后端积分逻辑一致

修复2: 积分数据同步机制
- initAuth函数改为异步，页面加载时强制刷新用户信息
- index.html: 更新initAuth调用为Promise处理
- 确保页面显示最新的后端积分数据
- 添加错误处理和降级方案

修复3: 数据版本控制和缓存管理
- 添加DATA_VERSION常量(1.1)用于版本控制
- loadAuthData: 检查数据版本，自动清理过期缓存
- saveAuthData: 保存数据版本信息
- 添加详细调试日志便于问题排查

技术细节：
- 修复文件：frontend/auth.js, frontend/index.html
- 新增版本控制机制防止缓存数据不一致
- 异步初始化确保数据实时性
- 完善错误处理和日志记录

预期效果：
- 积分显示准确：testuser正确显示50积分
- 积分扣减正确：生图后正确减少到49积分
- 数据同步及时：页面加载时获取最新积分
- 缓存自动管理：版本更新时自动清理过期数据

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -258,9 +258,13 @@
         // 页面加载完成后初始化
         document.addEventListener('DOMContentLoaded', () => {
             console.log('页面加载完成，初始化认证系统');
-            
-            // 初始化认证系统
-            initAuth();
+
+            // 初始化认证系统（异步）
+            initAuth().then(() => {
+                console.log('认证系统初始化完成');
+            }).catch(error => {
+                console.error('认证系统初始化失败:', error);
+            });
 
             // 绑定认证相关事件
             bindAuthEvents();
